# layerSVD

./: .gitignore  README.md  pyproject.toml
docs/: index.html  svd.html  trace.html
docs/css/: style.css
docs/data/: architecture.json
docs/data/svd/: U-L+00.f16  U-L+01.f16  U-L+02.f16  U-L+03.f16  U-L+04.f16  U-L+05.f16  U-L+06.f16  U-L+07.f16  U-L+08.f16  U-L+09.f16  U-L+10.f16  U-L+11.f16  U-L+12.f16  U-L+13.f16  U-L+14.f16  U-L+15.f16  U-L+16.f16  U-L+17.f16  U-L+18.f16  U-L+19.f16  U-L+20.f16  U-L+21.f16  U-L+22.f16  U-L+23.f16  U-L+24.f16  U-L+25.f16  U-L+26.f16  U-L+27.f16  U-L+28.f16  U-L+29.f16  V-L+00.f16  V-L+01.f16  V-L+02.f16  V-L+03.f16  V-L+04.f16  V-L+05.f16  V-L+06.f16  V-L+07.f16  V-L+08.f16  V-L+09.f16  (+22 more)
docs/data/traces/: arithmetic.json  code.json  index.json  narrative.json
docs/js/: arch.js  data_loader.js  svd.js  trace.js
layersvd/: __init__.py  build_arch.py  chunk_svd.py  dequant.py  dequant_test.py  gguf_reader.py  project.py  svd_pipeline.py
prompts/: arithmetic.txt  code.txt  narrative.txt
tools/eval-capture/: CMakeLists.txt  build.sh  eval-capture.cpp
