[project]
name = "layersvd"
version = "0.1.0"
description = "SVD-based concept explorer for Gemma 4 26B-A4B (GGUF)"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "tqdm>=4.66",
    "jinja2>=3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["layersvd"]
